--- a/style.css
+++ b/style.css
@@ -9,7 +9,18 @@ button{
     width: 80px;
     box-sizing: border-box;
     border-radius: 10px;
+    border: solid #005F73;
 }
+
+button:hover{
+    border: solid white;
+}
+
+button:active{
+    border: solid #005F73;
+    font-size: 40px;
+}
+
 
 body{
     background-color: #001219;
@@ -20,6 +31,7 @@ body{
 }
 
 .calculator{
+    user-select: none;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -41,8 +53,13 @@ body{
 .screen{
     background-color: #0A9396;
     border: solid 2px black;
+    padding: 0 10px;
     height: 100px;
     border-radius: 10px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 48px;
 }
 
 .number{
